<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013-2015 The CyanogenMod Project
     Copyright (C) 2017 The LineageOS Project
     Copyright (C) 2017 The MoKee Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Setup Wizard</string>
    <string name="product_name" translatable="false">mokee</string>
    <string name="os_name" translatable="false">MoKee Open Source</string>
    <string name="default_theme_name" translatable="false">Material</string>

    <string name="mk_wizard_script_uri" translatable="false">android.resource://com.elephone.setupwizard/raw/mk_wizard_script</string>
    <string name="mk_wizard_script_user_uri" translatable="false">android.resource://com.elephone.setupwizard/raw/mk_wizard_script_user</string>

    <!-- Partner SUW Strings -->
    <string name="theme_type" translatable="false">material_light</string>
    <string name="wizard_script_uri" translatable="false">android.resource://com.elephone.setupwizard/raw/wizard_script</string>
    <string name="wizard_script_user_uri" translatable="false">android.resource://com.elephone.setupwizard/raw/wizard_script_user</string>
    <string name="activity_label_empty" />

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="is_saving">"(已保存)"</string>
    <string name="demo_string">Wifi_12345xxxxxabc</string>
    <string name="loading">Just a sec\u2026</string>

    <string name="setup_complete">Setup is complete</string>
    <string name="setup_welcome">Welcome</string>
    <string name="setup_locale">Choose Language</string>
    <string name="setup_wifi">Select Wi-Fi</string>
    <string name="setup_sim_missing">SIM card missing</string>
    <string name="setup_choose_data_sim">Choose SIM for data</string>
    <string name="setup_location">Location services</string>
    <string name="setup_other">Other services</string>
    <string name="setup_datetime">Date &amp; time</string>
    <string name="setup_current_date">Current date</string>
    <string name="setup_current_time">Current time</string>

    <string name="sim_missing_summary" product="tablet">A SIM card has not been detected in your tablet. To insert a SIM card, read the instructions that came with your device.</string>
    <string name="sim_missing_summary" product="default">A SIM card has not been detected in your phone. To insert a SIM card, read the instructions that came with your device.</string>
    <string name="choose_data_sim_summary" product="tablet">Which SIM do you want to use for data? The selected SIM may incur network charges as it will be used to set up your tablet.</string>
    <string name="choose_data_sim_summary" product="default">Which SIM do you want to use for data? The selected SIM may incur network charges as it will be used to set up your phone.</string>

    <string name="date_time_summary">Set your time zone and adjust current date and time if needed</string>

    <string name="backup_data_summary"><b>Back up</b> app data, Wi-Fi passwords, and other settings to Google servers</string>

    <string name="other_services_summary">These services put Google to work for you, and you can turn them on or off at any time. Data will be used in accordance with Google\'s <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
    <string name="location_services_summary">Location services allows system and third party apps to gather and use data such as your approximate location. For example, an app may use your approximate location to locate nearby coffee shops.</string>
    <string name="location_access_summary"><b>Allow apps that have asked your permission</b> to use your location information. This may include your current location and past locations.</string>
    <string name="location_battery_saving"><b>Reduce battery consumption</b> by restricting the number of GPS updates per hour.</string>
    <string name="location_network"><b>Use Wi-Fi</b> to help apps determine your location.</string>
    <string name="location_network_telephony"><b>Use Wi-Fi and cellular networks</b> to help apps determine your location.</string>
    <string name="location_network_gms"><b>Use Google\'s location service</b> to help apps determine your location. This means sending anonymous location data to Google, even when no apps are running.</string>

    <string name="setup_mobile_data">Turn on cellular data</string>
    <string name="setup_mobile_data_no_service">No service</string>
    <string name="setup_mobile_data_emergency_only">Emergency calls only</string>
    <string name="enable_mobile_data_summary">Do you want to use cellular data during setup? Turning on cellular data may be subject to data charges.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>

    <string name="emergency_call">Emergency call</string>

    <string name="setup_services">MoKee features</string>
    <string name="services_explanation" product="tablet">These services work for you to extend the capabilities of your tablet. Data will be used in accordance with MoKee\'s <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
    <string name="services_explanation" product="default">These services work for you to extend the capabilities of your phone. Data will be used in accordance with MoKee\'s <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
    <string name="services_privacy_policy">Privacy Policy</string>
    <string name="services_os_nav_keys_label"><b>Use on screen navigation keys</b> instead of hardware keys.</string>
    <string name="services_os_privacy_guard"><b>Enable Privacy guard</b> to make your personal data such as contacts, messages or call logs not available for newly installed apps</string>

    <string name="setup_unlock">Unlock</string>
    <string name="setup_device_locked">This device has been locked by the user.</string>
    <string name="setup_device_locked_instructions"><i>To turn this feature off/on, please go to Settings > Security</i></string>

    <!-- Fingerprint setup -->
    <string name="settings_fingerprint_setup_title">Select backup screen lock type</string>
    <string name="settings_fingerprint_setup_details">How would you like to lock your screen?</string>
    <string name="fingerprint_setup_title">Fingerprint setup</string>
    <string name="fingerprint_setup_summary">To use your fingerprint sensor to unlock your screen, you\'ll need to:</string>
    <string name="fingerprint_setup_backup_lock_method">Setup a secondary unlock method</string>
    <string name="fingerprint_setup_add_fingerprint">Add your fingerprint</string>
    <string name="fingerprint_setup_screen_lock_setup">Setup screen lock</string>
    <string name="sim_locale_changed">%1$s SIM detected</string>

    <!-- secure lock screen -->
    <string name="settings_lockscreen_setup_title">Select screen lock type</string>
    <string name="settings_lockscreen_setup_details">How would you like to lock your screen?</string>
    <string name="lockscreen_setup_title">Protect your phone</string>
    <string name="lockscreen_setup_summary"><b>Protect this device</b> and require a PIN, pattern, or password to unlock the screen</string>
    <string name="lockscreen_setup_screen_lock_setup">Set up</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="name_for_wifi">WIFI-name</string>
    <string name="wifi_address">WIFI-desc</string>
    <string name="text_large">Large Text</string>
    <string name="eye_mode">Eyes Settings</string>
    <string name="wifi_connect">Connted</string>
    <string name="wifi_connecting">Connting</string>
    <string name="change_wifi_connect">Connect the WI-FI if needed</string>
    <string name="demo_title">这里是开机想到设置选项的标题内容介绍，请问你是不是想说些什么呢 不想说就拉到吧！</string>
    <string name="demo_summary">这里是想用来做什么功能的内容</string>
    <string name="select_local">Welcome</string>
    <string name="signal_strength">Signal</string>
    <string name="security_level">Security</string>
    <string name="connect">Contect</string>
    <string name="disconnect">Forget</string>
    <string name="conn_status">Status</string>
    <string name="ip_address">IP Address</string>
    <string name="down_refresh">Refresh</string>
    <string name="pre_refresh">Last Refresh</string>
    <string name="setup_permission">Permission Aequest</string>
    <string name="setup_trems">Terms And Agreement</string>
    <string name="back_str">Back</string>
    <string name="lock_summary">@string/fingerprint_setup_screen_lock_setup</string>
    <string name="lock_skip_summary">Not now</string>

    <string name="agree">Agree</string>
    <string name="setup_finish">Finish</string>
    <string name="setup_finish_summary">Your device is set up.</string>
    <string name="dialer_text">Dialer and Massage </string>
    <string name="unagree">Disagree</string>
    <string name="setup_trems_summary">Before using ELEPHONE equipment, please read the following terms and conditions, click on the title to open the file for reading, once you start using ELEPHONE equipment, indicates that you agree to and accept the constraints of the ELEPHONE terms and conditions.</string>
    <string name="setup_trems_text_up">User license agreement</string>
    <string name="setup_trems_text_down">Privacy policy</string>
    <string name="setup_trems_text_show">Click the agree button to indicate that you have read and agree to the above terms and conditions.</string>
    <string name="face_setup_title">Face ID</string>
    <string name="face_setup_summary">Face ID<b>is a quick way to unlock</b>.You just need to light up the screen and look directly at the phone, which can unlock and use your device.</string>
    <string name="add_face_id">Add unlocking face</string>
</resources>
