<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_custom_dialog"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_wifi_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/text_large"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="@dimen/wifi_size"
                android:textColor="@color/text_color" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@null"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/red_divider"/>

            <CheckBox
                android:id="@+id/cbx_show_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:button="@drawable/pwd_check_selctor"
                android:paddingLeft="13dp"
                android:textSize="@dimen/wifi_size"
                android:text="@string/show_password"
                android:textColor="@android:color/black" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="15dp"
        android:gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:background="@drawable/tv_bg_selector"
            android:layout_alignParentRight="true"
            android:textColor="@color/red" />

        <View
            android:layout_width="@dimen/dialog_bottom_btn_padding"
            android:layout_height="1dp"
            android:layout_alignParentRight="true"
            android:background="#00000000" />

        <TextView
            android:id="@+id/txt_btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:enabled="true"
            android:background="@drawable/tv_bg_selector"
            android:gravity="center"
            android:text="@string/connect"
            android:textColor="@color/text_color" />
    </LinearLayout>

</LinearLayout>
