<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The CyanogenMod Project
     Copyright (C) 2017 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/primary">

    <include layout="@layout/header_condensed" />

    <FrameLayout android:id="@+id/page"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1">

        <ScrollView android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">

            <LinearLayout
                android:id="@+id/frame_view"
                android:orientation="vertical"
                android:paddingLeft="@dimen/content_margin_left"
                android:paddingRight="@dimen/content_margin_left"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/page_view"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/PageContent"
                    android:visibility="gone" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/PageSummaryText"
                        android:textSize="13sp"
                        android:textColor="@color/text_color"
                        android:paddingBottom="@dimen/summary_margin_bottom"
                        android:text="@string/choose_data_sim_summary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/PageSummaryText"
                        android:textSize="13sp"
                        android:textColor="@color/red"
                        android:paddingBottom="@dimen/summary_margin_bottom"
                        android:text="@string/dialer_text" />

                    <include layout="@layout/divider" />

                </LinearLayout>

                <TextView
                    android:id="@+id/data_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/PageSummaryText"
                    android:textSize="13sp"
                    android:textColor="@color/text_color"
                    android:paddingBottom="@dimen/summary_margin_bottom"
                    android:visibility="gone"
                    android:text="@string/enable_mobile_data_summary" />

                <include layout="@layout/divider" />

                <LinearLayout
                    android:id="@+id/data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:gravity="center_vertical"
                    android:background="?android:attr/selectableItemBackground"
                    android:visibility="gone"
                    android:clickable="true">

                    <TextView
                        android:id="@+id/enable_data_title"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:textColor="@color/title_color"
                        android:text="@string/setup_mobile_data"
                        android:maxLines="4" />

                    <Switch
                        android:id="@+id/data_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:switchMinWidth="@dimen/switch_btn_width"
                        android:duplicateParentState="true"
                        android:clickable="false"
                        android:thumb="@drawable/switch_btn_slipper"
                        android:track="@drawable/switch_btn"
                        android:textOff="@string/no"
                        android:textOn="@string/yes"/>
                </LinearLayout>

                <include layout="@layout/divider" />

            </LinearLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:indeterminateOnly="true"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_gravity="top"
            android:visibility="gone"/>
    </FrameLayout>
    <fragment android:name="com.android.setupwizard.navigationbar.SetupWizardNavBar"
        android:id="@+id/navigation_bar"
        style="@style/setup_wizard_navbar_style" />
</LinearLayout>
