<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The CyanogenMod Project
     Copyright (C) 2017 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary">

    <include layout="@layout/header_condensed"
       android:visibility="gone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:layout_marginTop="@dimen/title_margin_top"
        android:gravity="center_horizontal"
        android:text="@string/select_local"
        android:textColor="@color/title_color"
        android:maxLines="1"
        android:ellipsize="end"
        style="@style/PageTitle" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/choose_locale_margin_top"
        android:paddingLeft="@dimen/content_margin_left"
        android:paddingRight="@dimen/content_margin_left">

        <TextView
            android:id="@+id/view_local"
            android:text="@string/setup_locale"
            android:drawableRight="@drawable/down"
            android:drawablePadding="10dp"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color"
            android:background="@drawable/tv_bg_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.elephone.setupwizard.widget.LocalePicker
            android:id="@+id/locale_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:visibility="gone"
            android:focusableInTouchMode="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/view_next"
            android:layout_marginTop="@dimen/button_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/next_selctor" />

        <LinearLayout
            android:gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/view_call"
                android:text="@string/emergency_call"
                android:drawableLeft="@drawable/ic_call"
                android:textColor="@color/text_color"
                android:drawablePadding="5dp"
                android:background="@drawable/tv_bg_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/view_eyes"
                android:layout_marginLeft="@dimen/eyes_margin_left"
                android:drawablePadding="5dp"
                android:text="@string/eye_mode"
                android:textColor="@color/text_color"
                android:background="@drawable/tv_bg_selector"
                android:drawableLeft="@drawable/ic_eyes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
